# dat259-compilers

./: .gitignore  LICENSE  README.md  antlr-lexer-notes.md  week5.md
assignments/: week5.md
edbs/: EDBS.g4  EDBSTokens.g4  README.md  environment.yml  pyproject.toml
edbs/edbs/: compiler.py  interpreter.py  main.py  symbols.py  test.py  typing.py  utils.py
edbs/edbs/parser/: EDBS.interp  EDBSLexer.interp  EDBSLexer.py  EDBSLexer.tokens  EDBSParser.py  EDBSVisitor.py
edbs/examples/: laan.edbs  modules.edbs  types.edbs  uttrykk.edbs  wordcount.edbs
enkel/: examples.enkel
llvm/: factorial.ll  factorial_it.ll  hello.c  hello.ll  max.ll  strings.ll  vector.ll
llvm/optimization/: inline.ll  instcombine.ll  loop.c  loop.ll  sums.ll  to_opt.c  to_opt.ll
notes/: antlr-00-setup-notes.md  antlr-01-lexer-notes.md  antlr-02-parser-notes.md  antlr-03-translation-notes.md  exam.md  llvm-01-intro-notes.md  llvm-02-layout-notes.md  llvm-03-generation-notes.md
uniserver/: examples.uni  explanations.md
